# totalrecall

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  pyrightconfig.json
docs/: friction-report.md
skills/totalrecall-analyze/: SKILL.md
skills/totalrecall-propose/: SKILL.md
src/totalrecall/: applier.py  catalog.py  cli.py  config.py  events.py  hookcmd.py  hookinstall.py  ledger.py  locking.py  merger.py  models.py  opencode_export.py  orchestrator.py  paths.py  patterns_store.py  proposals_store.py  proposer.py  queue.py  reconcile.py  render.py  strength.py  synth.py  worker.py
tests/: conftest.py  test_adapters_dispatch.py  test_adapters_dispatch_opencode.py  test_applier_apply.py  test_applier_files.py  test_catalog.py  test_catalog_phase2.py  test_claude_code_adapter.py  test_cli.py  test_cli_opencode.py  test_cli_phase2.py  test_codex_adapter.py  test_config.py  test_config_phase2.py  test_default_runner.py  test_entrypoint.py  test_events.py  test_hookcmd.py  test_hookinstall.py  test_ledger.py  test_merger.py  test_merger_phase2.py  test_merger_session_dedup.py  test_models.py  test_models_phase2.py  test_opencode_adapter.py  test_opencode_export.py  test_orchestrator.py  test_paths.py  test_paths_opencode.py  test_paths_phase2.py  test_patterns_store.py  test_proposals_store.py  test_propose_skill.py  test_proposer_draft.py  test_proposer_select.py  test_queue.py  test_reconcile.py  test_reconcile_codex.py  test_reconcile_opencode.py  (+11 more)
tests/fixtures/: cc_analysis.jsonl  cc_basic.jsonl  codex_basic.jsonl  opencode_cache_basic.jsonl
(+13 files in other folders)
