[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "totalrecall"
version = "0.1.0"
description = "Learn from your AI-tool sessions: detect collaboration friction, maintain a living insights doc."
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = ["filelock>=3.13"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
totalrecall = "totalrecall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
